--- a/datasets/convenio_entrada/datapackage.yaml
+++ b/datasets/convenio_entrada/datapackage.yaml
@@ -1,7 +1,3 @@
-ckan_hosts:
-  https://homologa.cge.mg.gov.br/:
-    datapackage.json: 05342b9b-d0bc-4ec7-8f3c-4e3be1e32044
-    dm_unidade_orc: a369ab76-22c2-41f8-988e-58da14f3517f
-    ft_convenio_entrada: 18e9cb47-39f7-46c5-aa4a-7e626a3247d9
+ckan_hosts: ''
 description: null
 keywords: null
