--- a/datasets/convenio_entrada/datapackage.yaml
+++ b/datasets/convenio_entrada/datapackage.yaml
@@ -1,3 +1,7 @@
-description:
-keywords:
-
+ckan_hosts:
+  https://homologa.cge.mg.gov.br:
+    datapackage.json: 5cfebb47-be9e-497f-ae3d-da27ed136c3a
+    dm_unidade_orc: 51aa152b-1e2a-40eb-978c-800e7b83f74c
+    ft_convenio_entrada: ca7f7198-9e03-43c9-8ec1-1700671dc20e
+description: null
+keywords: null
