--- a/schemas/ft_receita_v2018.yaml
+++ b/schemas/ft_receita_v2018.yaml
@@ -32,6 +32,19 @@ fields:
     constraints:
       required: true
       unique: false
+  - name: id_desdobramento_1
+    title: Desdobramento 1 - Chave
+    description: |
+      Markdown rules
+
+      - item 1
+      - item 2
+    type: integer
+    format: default
+    bareNumber: true
+    constraints:
+      required: true
+      unique: false
   - name: id_desdobramento_2
     title: Desdobramento 2 - Chave
     type: integer
