--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-dpckan==0.1.11
+dpckan==0.1.13
 jsonpatch==1.32
 psycopg2==2.9.1
 PyMySQL==1.0.2
 ipdb==0.13.9
-git+https://github.com/transparencia-mg/dtamg-py.git@main#egg=dtamg-py
+dtamg-py==0.1.2
+ruamel.yaml==0.17.17
